# Final Production-Grade Database Design — Document Generator Platform


Project document_generator_service {
  database_type: "PostgreSQL"
  note: '''
  Enterprise-grade asynchronous document generation platform.

  Features:
  - Template management
  - Template versioning
  - JSON schema validation
  - Async document rendering
  - Storage abstraction
  - DMS integration
  - Callback/webhook
  - Retry mechanism
  - Multi-tenant ready
  - Auditability
  - Digital signature ready
  '''
}

//////////////////////////////////////////////////////
// ENUMS
//////////////////////////////////////////////////////

Enum template_engine {
  HANDLEBARS
  MUSTACHE
  HTML
}

Enum output_format {
  PDF
  HTML
  DOCX
}

Enum document_status {
  PENDING
  QUEUED
  PROCESSING
  GENERATED
  FAILED
  CANCELLED
}

Enum dms_status {
  NOT_SENT
  QUEUED
  SENT
  FAILED
}

Enum callback_status {
  PENDING
  SUCCESS
  FAILED
  RETRYING
}

Enum storage_provider {
  LOCAL
  S3
  MINIO
  GCS
  AZURE
}

//////////////////////////////////////////////////////
// TEMPLATE MASTER
//////////////////////////////////////////////////////

Table document_templates {
  id                bigint [pk, increment]

  tenant_id         uuid

  code              varchar(100) [not null]
  name              varchar(255) [not null]
  description       text

  engine            template_engine [not null]
  default_format    output_format [not null]

  category          varchar(100)

  is_active         boolean [not null, default: true]

  created_by        varchar(100)
  updated_by        varchar(100)

  created_at        timestamp [not null, default: `now()`]
  updated_at        timestamp [not null, default: `now()`]

  Indexes {
    (tenant_id, code) [unique]
    code [name: 'idx_document_templates_code']
    category [name: 'idx_document_templates_category']
    is_active [name: 'idx_document_templates_active']
    created_at [name: 'idx_document_templates_created_at']
  }
}

//////////////////////////////////////////////////////
// TEMPLATE VERSIONING
//////////////////////////////////////////////////////

Table document_template_versions {
  id                   bigint [pk, increment]

  tenant_id            uuid

  template_id          bigint [not null, ref: > document_templates.id]

  version              int [not null]

  content              text [not null]

  schema               jsonb
  variables            jsonb
  sample_payload       jsonb

  output_format        output_format [not null]

  checksum             varchar(64)

  is_published         boolean [not null, default: false]

  published_at         timestamp

  created_by           varchar(100)

  created_at           timestamp [not null, default: `now()`]

  Indexes {
    (template_id, version) [unique]
    template_id [name: 'idx_template_versions_template_id']
    version [name: 'idx_template_versions_version']
    is_published [name: 'idx_template_versions_published']
    created_at [name: 'idx_template_versions_created_at']
  }
}

//////////////////////////////////////////////////////
// DOCUMENT REQUEST / GENERATED DOCUMENT
//////////////////////////////////////////////////////

Table documents {
  id                    bigint [pk, increment]

  tenant_id             uuid

  request_id            varchar(100) [not null]

  template_id           bigint [ref: > document_templates.id]
  template_version_id   bigint [ref: > document_template_versions.id]

  template_code         varchar(100) [not null]
  template_version      int [not null]

  payload               jsonb [not null]
  metadata              jsonb

  status                document_status [not null, default: 'PENDING']

  error_message         text

  output_format         output_format [not null]

  //////////////////////////////////////////////////////
  // GENERATED FILE
  //////////////////////////////////////////////////////

  file_name             varchar(255)
  file_path             text

  storage_provider      storage_provider

  file_size             bigint

  checksum              varchar(64)

  content_type          varchar(100)

  //////////////////////////////////////////////////////
  // DIGITAL SIGNATURE
  //////////////////////////////////////////////////////

  is_signed             boolean [not null, default: false]

  signature_provider    varchar(100)

  signed_at             timestamp

  //////////////////////////////////////////////////////
  // DMS
  //////////////////////////////////////////////////////

  store_to_dms          boolean [not null, default: false]

  dms_document_id       varchar(100)

  dms_status            dms_status [not null, default: 'NOT_SENT']

  //////////////////////////////////////////////////////
  // CALLBACK / WEBHOOK
  //////////////////////////////////////////////////////

  has_callback          boolean [not null, default: false]

  callback_url          text

  callback_status       callback_status [not null, default: 'PENDING']

  callback_last_at      timestamp

  //////////////////////////////////////////////////////
  // RETRY
  //////////////////////////////////////////////////////

  retry_count           int [not null, default: 0]

  next_retry_at         timestamp

  //////////////////////////////////////////////////////
  // EXPIRATION
  //////////////////////////////////////////////////////

  expired_at            timestamp

  //////////////////////////////////////////////////////
  // AUDIT
  //////////////////////////////////////////////////////

  created_by            varchar(100)

  created_at            timestamp [not null, default: `now()`]

  processed_at          timestamp

  updated_at            timestamp [not null, default: `now()`]

  deleted_at            timestamp

  Indexes {
    (tenant_id, request_id) [unique]

    request_id [name: 'idx_documents_request_id']

    template_code [name: 'idx_documents_template_code']

    status [name: 'idx_documents_status']

    dms_status [name: 'idx_documents_dms_status']

    callback_status [name: 'idx_documents_callback_status']

    created_at [name: 'idx_documents_created_at']

    processed_at [name: 'idx_documents_processed_at']

    next_retry_at [name: 'idx_documents_next_retry']

    expired_at [name: 'idx_documents_expired_at']
  }
}

//////////////////////////////////////////////////////
// DOCUMENT RENDER LOGS
//////////////////////////////////////////////////////

Table document_render_logs {
  id                    bigint [pk, increment]

  document_id           bigint [not null, ref: > documents.id]

  status                document_status [not null]

  message               text

  execution_time_ms     bigint

  stack_trace           text

  worker_name           varchar(100)

  created_at            timestamp [not null, default: `now()`]

  Indexes {
    document_id [name: 'idx_render_logs_document_id']
    status [name: 'idx_render_logs_status']
    created_at [name: 'idx_render_logs_created_at']
  }
}

//////////////////////////////////////////////////////
// DOCUMENT CALLBACK ATTEMPTS
//////////////////////////////////////////////////////

Table document_callback_attempts {
  id                    bigint [pk, increment]

  document_id           bigint [not null, ref: > documents.id]

  callback_url          text [not null]

  request_payload       jsonb

  response_payload      jsonb

  response_status_code  int

  is_success            boolean [not null, default: false]

  error_message         text

  attempted_at          timestamp [not null, default: `now()`]

  Indexes {
    document_id [name: 'idx_callback_attempts_document_id']
    attempted_at [name: 'idx_callback_attempts_attempted_at']
  }
}



